# utilityscripts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
Python/: FileLister.py  Units.py  blog_tools.py  fileextensionchanger.py  multiinterp.py  photo_renamer.py  section_prop.py  solvers.py
_deprecate/: section_prop.py  test_section_prop.py
data/: steel_data.xlsx  steel_sections.xlsx  timber_data.xlsx
python/: FileLister.py  action_folder_renamer.py  as1170_2.py  as1170_2.toml  blog_tools.py  empty_folder_finder.py  image_comparer.py  multiinterp.py  my_math_utils.py  np_integrate.py  photo_renamer.py  section_prop.py  simple_Beams.py  simple_beams.py  solvers.py  units.py
src/utilityscripts/: __init__.py  action_folder_renamer.py  as5216.py  empty_folder_finder.py  file_lister.py  fileextensionchanger.py  geometry.py  imageresize.py  imp_to_si.py  math_utils.py  multiinterp.py  photo_renamer.py  plotting.py  result.py  ui_funcs.py  units.py
tests/: plot_polygon.py  steel_sections.xlsx  test_as1170_2.py  test_as1170_2.toml  test_as1170_2_2021.toml  test_as1170_4.py  test_as3600.py  test_as4100.py  test_as522x.py  test_ccaa_t48.py  test_concrete.py  test_en14015.py  test_geometry.py  test_geotech.py  test_imperial_to_metric.py  test_loads.py  test_lug.py  test_math_utils.py  test_result.py  test_section_prop.py  test_steel.py  test_units.py  test_wind.py
tests/aluminium/: test_as1664_1.py
tests/analysis/: test_floorplate.py
tests/concrete/: test_as3600.py  test_as5216.py  test_ccaa_t48.py  test_concrete.py
tests/geotech/: test_as4678.py
tests/loads/: test_as2304.py  test_as522x.py
tests/reports/: test_deprecatedresult.py  test_variable.py  test_variables.ipynb
tests/result/: test_deprecatedresult.py  test_result.ipynb  test_result.py  test_variable.py
tests/seismic/: test_as1170_4.py
tests/steel/: test_as4100.py  test_as4600.py  test_asi_dg07.py  test_design.ipynb  test_design.py  test_steel.py
tests/wind/: test_as1170_2.py  test_as1170_2_2011.toml  test_as1170_2_2021.toml  test_wind.py
utilityscripts/: __init__.py  action_folder_renamer.py  as1170_2.py  as1170_2.toml  as1170_2.xlsx  as3774.py  blog_tools.py  concrete.py  empty_folder_finder.py  en14015_data.xlsx  file_lister.py  fileextensionchanger.py  geometry.py  geotech.py  image_comparer.py  imageresize.py  imperial_to_metric.py  loads.py  math_utils.py  multiinterp.py  np_integrate.py  password.py  photo_renamer.py  plotting.py  result.py  section_prop.py  simple_beams.py  solvers.py  steel.py  timber.py  ui_funcs.py  units.py  wind.py
utilityscripts/concrete/: as3600.py  ccaa_t48.py  concrete.py  concrete_exceptions.py
utilityscripts/earthquake/: as1170_4.py  as1170_4_data.xlsx
utilityscripts/lifting_lug/: lifting_lug.py  lug_check.py
utilityscripts/loads/: as522x.py  crane_data.xlsx  en14015.py  loads.py  (+1 more)
(+36 files in other folders)
