[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "utilityscripts"
authors = [{name = "Sean Kane", email = "mail@ifitsmoving.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy", "matplotlib", "section-properties", "pint", "polars"]

[project.urls]
Home = "https://ifitsmoving.com"

[project.optional-dependencies]
dev = ['isort', 'coverage', 'mypy', 'pylint', 'pytest', 'ruff']

[tool.pylint]
disable = ["C0103"]
